<resources>
    <string name="app_name">Natife Forecast</string>
    <string name="first_frag_text">First Fragment</string>
    <string name="wind_blank">- m/s</string>
    <string name="humidity_blank">- %</string>
    <string name="temp_blank">- C</string>
    <string name="date_blank">ПН, 19 июля</string>
    <string name="city_blank">blank city</string>
    <string name="no_internet_connection">Нет соединения с интернетом</string>
</resources>