<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".forecast.ForecastFragment">

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_blank" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_blank" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_blank" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity_blank" />

    <TextView
        android:id="@+id/wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind_blank" />

    <Button
        android:id="@+id/button"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:text="next"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/decor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="decor"
        tools:ignore="HardcodedText"
        tools:viewBindingIgnore="true" />

</LinearLayout>